# frappe

./: .gitignore  README.md  pyproject.toml
examples/: basic_example.py  compare_all_solvers.py  compare_solvers.py  debug_fw_vs_pgd.py  full_optimization_test.py  kuhn_engine_checks.py  quick_kuhn_sanity.py  run_experiment.py  sfw_tuning_experiment.py  test_entropy.py  test_svrg.py
notebooks/: paper_plots.ipynb
paper/: main.tex  references.bib
src/: __init__.py
src/agents/: __init__.py  fmap.py  nash.py  opponent.py
src/core/: __init__.py  kuhn.py  utils.py
src/engine/: __init__.py  dealer.py  runner.py
src/optimization/: __init__.py  base.py  fw.py  gradients.py  pgd.py  sfw.py
