[project]
name = "opponent-modeling"
version = "0.1.0"
description = "Scalable, Safe, and Adaptive Opponent Modeling - FMAP Algorithm Implementation"
authors = [
    {name = "Research Team", email = "research@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26.0",
    "scipy>=1.11.0",
    "plotly>=5.18.0",
    "pandas>=2.1.0",
    "tqdm>=4.66.0",
    "matplotlib>=3.10.8",
]

[project.optional-dependencies]
gurobi = ["gurobipy>=11.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ipykernel>=6.29.0",
    "matplotlib>=3.9.0",
    "nbformat>=5.10.0",
]
